--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "enchannel-zmq-backend": "^6.0.11",
     "kernelspecs": "^2.0.0",
+    "node-pre-gyp": "^0.10.0",
     "spawnteract": "^4.0.0"
   }
 }
