--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
     "kernelspecs": "^2.0.0",
     "lodash": "^4.17.10",
     "muse-js": "^3.0.1",
+    "osc-js": "^1.2.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0-beta.13",
