--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bleat": "^0.1.8",
     "enchannel-zmq-backend": "^6.0.11",
     "kernelspecs": "^2.0.0",
+    "muse-js": "^3.0.1",
+    "noble-winrt": "^0.1.0",
     "node-pre-gyp": "^0.10.0",
     "spawnteract": "^4.0.0"
   }
