--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,19 @@ typings/
 
 # next.js build output
 .next
+
+# App packaged
+release
+app/main.prod.js
+app/main.prod.js.map
+app/renderer.prod.js
+app/renderer.prod.js.map
+app/style.css
+app/style.css.map
+dist
+dll
+main.js
+main.js.map
+
+.idea
+npm-debug.log.*
