--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   "author": {
     "name": "Dano Morrison",
     "email": "dano@neurotechx.com",
-    "url": "https://github.com/makebrainwa"
+    "url": "https://github.com/makebrainwaves"
   },
   "license": "MIT",
   "keywords": [
