--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -17,6 +17,7 @@
     "flowtype/union-intersection-spacing": ["error", "always"],
     "flowtype/use-flow-type": "error",
     "flowtype/valid-syntax": "error",
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "import/prefer-default-export": 0
   }
 }
