--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -2,11 +2,11 @@
   "rules": {
     "flowtype/boolean-style": ["error", "boolean"],
     "flowtype/define-flow-type": "warn",
-    "flowtype/delimiter-dangle": ["error", "never"],
+    "flowtype/delimiter-dangle": "off",
     "flowtype/generic-spacing": ["error", "never"],
     "flowtype/no-primitive-constructor-types": "error",
     "flowtype/no-weak-types": "warn",
-    "flowtype/object-type-delimiter": ["error", "comma"],
+    "flowtype/object-type-delimiter": ["error", "semicolon"],
     "flowtype/require-parameter-type": "off",
     "flowtype/require-return-type": "off",
     "flowtype/require-valid-file-annotation": "off",
