--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+#  Jupyter stuff
+.ipynb_checkpoints
+__pycache__
+
+
 # Runtime data
 pids
 *.pid
