--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "no-console": "off",
     "no-use-before-define": "off",
     "no-multi-assign": "off",
+    "no-plusplus": "off",
     "promise/param-names": "error",
     "promise/always-return": "error",
     "promise/catch-or-return": "error",
