Added placeholder signal quality indicator

--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
     "babel-runtime": "^6.26.0",
     "d3": "^5.5.0",
     "devtron": "^1.4.0",
+    "dsp.js": "^1.0.1",
     "eeg-pipes": "^2.0.3",
     "electron-debug": "^1.5.0",
     "font-awesome": "^4.7.0",
@@ -215,8 +216,8 @@
     "kernelspecs": "^2.0.0",
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
-    "muse-js": "^3.1.0",
     "mousetrap": "^1.6.2",
+    "muse-js": "^3.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0-beta.13",
