Fixed bug where images were not showing in packaged app; Added direct loading of utils into jupyter kernel; Removed some logs

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
       "dist/",
       "node_modules/",
       "assets/",
+      "utils/jupyter/utils.py",
       "app.html",
       "viewer.html",
       "main.prod.js",
