--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
     "electron-debug": "^1.5.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "jspsych-react": "^0.1.1",
     "kernelspecs": "^2.0.0",
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
