--- a/package.json
+++ b/package.json
@@ -205,8 +205,10 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.0.0",
     "@nteract/messaging": "^4.0.1",
     "@nteract/transforms": "^4.3.0",
+    "ajv": "^6.5.3",
     "babel-runtime": "^6.26.0",
     "d3": "^5.5.0",
     "devtron": "^1.4.0",
@@ -227,8 +229,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^3.7.2",
-    "redux-observable": "^0.18.0",
+    "redux": "^4.0.0",
+    "redux-observable": "^1.0.0",
     "redux-thunk": "^2.2.0",
     "rxjs": "^6.3.2",
     "rxjs-compat": "^6.3.2",
