--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
     "promise/always-return": "error",
     "promise/catch-or-return": "error",
     "promise/no-native": "off",
+    "prefer-destructuring": "off",
     "react/no-will-update-set-state": "warn",
     "react/no-did-update-set-state": "off",
     "react/sort-comp": [
