--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "comma-dangle": "off",
     "generator-star-spacing": "off",
     "flowtype/object-type-delimiter": "off",
+    "flowtype/no-weak-types": "warn",
     "import/no-unresolved": "error",
     "import/no-extraneous-dependencies": "off",
     "jsx-a11y/anchor-is-valid": "off",
@@ -29,7 +30,8 @@
     "promise/no-native": "off",
     "prefer-destructuring": "off",
     "react/no-will-update-set-state": "warn",
-    "react/no-did-update-set-state": "off",
+    "react/no-did-mount-set-state": "warn",
+    "react/no-did-update-set-state": "warn",
     "react/sort-comp": [
       "error",
       {
