--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BrainWaves",
   "productName": "BrainWaves",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "EEG Experiment Desktop Application",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
@@ -44,7 +44,7 @@
   },
   "build": {
     "productName": "BrainWaves",
-    "appId": "",
+    "appId": "com.electron.brainwaves",
     "files": [
       "dist/",
       "node_modules/",
