--- a/package.json
+++ b/package.json
@@ -222,6 +222,7 @@
     "mkdirp": "^0.5.1",
     "mousetrap": "^1.6.2",
     "muse-js": "^3.1.0",
+    "rc-slider": "^8.6.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-hot-loader": "^4.3.6",
