--- a/package.json
+++ b/package.json
@@ -230,6 +230,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-toastify": "^4.4.0",
     "recursive-readdir": "^2.2.2",
     "redux": "^4.0.0",
     "redux-observable": "^1.0.0",
