--- a/app/package.json
+++ b/app/package.json
@@ -18,15 +18,10 @@
     "@babel/runtime-corejs2": "^7.0.0",
     "@neurosity/pipes": "^3.2.3",
     "babel-runtime": "^6.26.0",
-    "bleat": "^0.1.8",
     "enchannel-zmq-backend": "^6.0.11",
     "kernelspecs": "^2.0.0",
-    "noble-winrt": "^0.1.0",
-    "node-lsl": "git+https://github.com/urish/node-lsl.git",
     "node-pre-gyp": "^0.10.0",
     "spawnteract": "^4.0.0"
   },
-  "devDependencies": {
-    "patch-package": "^5.1.1"
-  }
+  "devDependencies": {}
 }
