--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "package-all": "npm run build && build -mwl",
     "package-linux": "npm run build && build --linux",
     "package-win": "npm run build && build --win --x64",
-    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run build-dll && electron-builder install-app-deps && node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && mkdir app/utils/pyodide/src && cd app/utils/pyodide/src && curl -LJO https://github.com/iodide-project/pyodide/releases/download/0.12.0/pyodide-build-0.12.0.tar.bz2 && tar xjf pyodide-build-0.12.0.tar.bz2 && rm pyodide-build-0.12.0.tar.bz2",
+    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run build-dll && electron-builder install-app-deps && node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && node -r babel-register internals/scripts/InstallPyodide.js",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.js'",
     "precommit": "lint-staged",
     "prestart": "npm run build",
@@ -186,6 +186,7 @@
     "flow-bin": "^0.72.0",
     "flow-runtime": "^0.17.0",
     "flow-typed": "^2.4.0",
+    "gunzip-maybe": "^1.4.1",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.0.0",
@@ -198,6 +199,7 @@
     "prettier": "^1.12.1",
     "react-test-renderer": "^16.4.0",
     "redux-logger": "^3.0.6",
+    "request": "^2.88.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "sinon": "^5.0.10",
@@ -207,6 +209,7 @@
     "stylelint": "^13.0.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^19.0.0",
+    "tar-fs": "^2.0.0",
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.28.4",
