display behavioral results

--- a/package.json
+++ b/package.json
@@ -222,10 +222,13 @@
     "mkdirp": "^0.5.1",
     "mousetrap": "^1.6.2",
     "muse-js": "^3.1.0",
+    "papaparse": "^5.0.0",
+    "plotly.js": "^1.48.3",
     "rc-slider": "^8.6.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-hot-loader": "^4.3.6",
+    "react-plotly.js": "^2.3.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -239,6 +242,7 @@
     "rxjs-compat": "^6.3.2",
     "semantic-ui-css": "^2.3.2",
     "semantic-ui-react": "^0.81.1",
+    "simple-statistics": "^7.0.2",
     "simplify-js": "^1.2.3",
     "source-map-support": "^0.5.3",
     "spawnteract": "^4.0.0",
