--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+app/utils/pyodide/src/
 
 # TypeScript v1 declaration files
 typings/
