--- a/package.json
+++ b/package.json
@@ -197,6 +197,7 @@
     "jest": "^23.0.0",
     "lint-staged": "^7.1.2",
     "minimist": "^1.2.0",
+    "node-gyp": "^6.0.1",
     "node-sass": "^4.9.0",
     "npm-logical-tree": "^1.2.1",
     "patch-package": "^5.1.1",
