--- a/package.json
+++ b/package.json
@@ -236,6 +236,7 @@
     "lodash": "^4.17.15",
     "lodash.clonedeep": "^4.5.0",
     "mkdirp": "^0.5.1",
+    "moment": "^2.24.0",
     "mousetrap": "^1.6.2",
     "muse-js": "^3.1.0",
     "papaparse": "^5.0.0",
