--- a/app/package.json
+++ b/app/package.json
@@ -19,10 +19,7 @@
     "@neurosity/pipes": "^3.2.3",
     "@babel/runtime": "7.10.2",
     "@babel/runtime-corejs2": "^7.10.2",
-    "enchannel-zmq-backend": "^9.1.22",
-    "kernelspecs": "^2.0.0",
-    "node-pre-gyp": "^0.15.0",
-    "spawnteract": "^5.0.1"
+    "node-pre-gyp": "^0.15.0"
   },
   "devDependencies": {
     "@babel/register": "^7.10.1"
