--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,7 @@
     "babel-runtime": "^6.26.0",
     "bleat": "^0.1.8",
     "noble-winrt": "^0.1.0",
-    "node-pre-gyp": "^0.10.0",
-    "spawnteract": "^4.0.0"
+    "node-pre-gyp": "^0.10.0"
   },
   "devDependencies": {
     "patch-package": "^5.1.1"
