--- a/app/package.json
+++ b/app/package.json
@@ -11,17 +11,16 @@
   },
   "scripts": {
     "electron-rebuild": "node -r babel-register ../internals/scripts/ElectronRebuild.js",
-    "postinstall": "patch-package && npm run electron-rebuild"
+    "postinstall": "npm run electron-rebuild"
   },
   "license": "MIT",
   "dependencies": {
     "@babel/runtime-corejs2": "^7.0.0",
     "@neurosity/pipes": "^3.2.3",
     "babel-runtime": "^6.26.0",
-    "bleat": "^0.1.8",
+    "bleat": "^0.1.9",
     "enchannel-zmq-backend": "^6.0.11",
     "kernelspecs": "^2.0.0",
-    "noble-winrt": "^0.1.0",
     "node-pre-gyp": "^0.10.0",
     "spawnteract": "^4.0.0"
   },
