roll back the labjs lib
this updated version of labjs is causing the app build to break. rolling back to previous version.

Co-Authored-By: Yury Shevchenko <shevchenko_yury@mail.ru>

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "package-all": "npm run build && build -mwl",
     "package-linux": "npm run build && build --linux",
     "package-win": "npm run build && build --win --x64",
+    "package-mac": "npm run build && build --mac --x64",
     "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run build-dll && electron-builder install-app-deps && node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
     "postlint-fix": "prettier --ignore-path .eslintignore --write '**/*.js'",
     "prestart": "npm run build",
@@ -197,7 +198,7 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "fbjs-scripts": "^0.8.3",
+    "fbjs-scripts": "^1.2.0",
     "file-loader": "^1.1.11",
     "flow-bin": "^0.72.0",
     "flow-runtime": "^0.17.0",
@@ -206,7 +207,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.0.0",
     "lint-staged": "^7.1.2",
-    "minimist": "^1.2.0",
+    "minimist": "^1.2.5",
     "node-gyp": "^6.0.1",
     "node-sass": "^4.13.1",
     "npm-logical-tree": "^1.2.1",
@@ -252,7 +253,7 @@
     "mousetrap": "^1.6.2",
     "muse-js": "^3.1.0",
     "papaparse": "^5.0.0",
-    "plotly.js": "^1.48.3",
+    "plotly.js": "^1.54.1",
     "rc-slider": "^8.6.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
