--- a/app/package.json
+++ b/app/package.json
@@ -15,9 +15,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime-corejs2": "^7.0.0",
     "@neurosity/pipes": "^3.2.3",
-    "babel-runtime": "^6.26.0",
+    "@babel/runtime": "7.9.6",
     "bleat": "^0.1.8",
     "enchannel-zmq-backend": "^6.0.11",
     "kernelspecs": "^2.0.0",
@@ -26,6 +25,7 @@
     "spawnteract": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/runtime-corejs2": "^7.9.6",
     "patch-package": "^5.1.1"
   }
 }
