--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "EEG Experiment Desktop Application",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
-    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.dll.js --colors",
-    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js --colors",
-    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.prod.js --colors",
+    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --config ./configs/webpack.config.renderer.dev.dll.babel.js --colors",
+    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --config ./configs/webpack.config.main.prod.babel.js --colors",
+    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --config ./configs/webpack.config.renderer.prod.babel.js --colors",
     "dev": "cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 npm run start-renderer-dev",
     "electron-rebuild": "electron-rebuild --parallel --force --types prod,dev,optional --module-dir app",
     "flow": "flow",
@@ -26,7 +26,7 @@
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./app/main.dev.js",
-    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
+    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config ./configs/webpack.config.renderer.dev.babel.js",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings -r @babel/register ./internals/scripts/RunTests.js",
     "test-all": "npm run lint && npm run flow && npm run build && npm run test && npm run test-e2e",
     "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings -r @babel/register ./internals/scripts/RunTests.js e2e",
@@ -199,10 +199,12 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.10",
+    "mini-css-extract-plugin": "^0.9.0",
     "minimist": "^1.2.5",
     "node-gyp": "^7.0.0",
     "node-sass": "^4.14.1",
     "npm-logical-tree": "^1.2.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "patch-package": "^6.2.2",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
@@ -217,6 +219,7 @@
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0",
     "tar-fs": "2.1.0",
+    "typed-css-modules-webpack-plugin": "^0.1.3",
     "uglifyjs-webpack-plugin": "2.2.0",
     "unbzip2-stream": "1.4.3",
     "url": "0.11.0",
@@ -228,11 +231,11 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
+    "@babel/runtime": "7.10.2",
     "@babel/runtime-corejs2": "^7.10.2",
     "@nteract/messaging": "^7.0.7",
     "@nteract/transforms": "^4.4.7",
     "ajv": "^6.12.2",
-    "@babel/runtime": "7.10.2",
     "d3": "^5.16.0",
     "devtron": "^1.4.0",
     "electron-debug": "^3.1.0",
