--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,17 @@
 {
+  "files.associations": {
+    ".babelrc": "jsonc",
+    ".eslintrc": "jsonc",
+    ".prettierrc": "jsonc",
+    ".stylelintrc": "json",
+    ".dockerignore": "ignore",
+    ".eslintignore": "ignore"
+  },
+
   "javascript.validate.enable": false,
-  "flow.useNPMPackagedFlow": true,
+  "javascript.format.enable": false,
+  "typescript.format.enable": false,
+
   "search.exclude": {
     ".git": true,
     ".eslintcache": true,
@@ -9,11 +20,11 @@
     "app/main.prod.js.map": true,
     "bower_components": true,
     "dll": true,
-    "flow-typed": true,
     "release": true,
     "node_modules": true,
     "npm-debug.log.*": true,
     "test/**/__snapshots__": true,
-    "yarn.lock": true
+    "yarn.lock": true,
+    "*.{css,sass,scss}.d.ts": true
   }
 }
